# insight-youtube-collector

./: .gitignore  CLAUDE.md  README.md  README_youtube_crawler.md  pyproject.toml  youtube_crawler.py
examples/: batch_config.yaml  keywords.txt  sources.txt
schemas/: video_output.v1.json
src/insight_youtube_collector/: __init__.py  batch.py  cli.py  collector.py  gui.py  gui_runner.py
src/insight_youtube_collector/analyzer/: __init__.py  pivot_analyzer.py
src/insight_youtube_collector/config/: __init__.py  settings.py
src/insight_youtube_collector/extractor/: __init__.py  metadata.py  transcript.py  video_source.py
src/insight_youtube_collector/models/: __init__.py  video.py
src/insight_youtube_collector/storage/: __init__.py  json_storage.py  warehouse_storage.py
tests/: __init__.py  test_extractor.py  test_models.py
